--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 		
 								<div class="fb-row">
 									<div class="copyrights-message">
-										<span>All Right Reserved to</span> <a href="javascript:;" target="_blank">LeadFold</a> <span>©2020</span>
+										<span>All Right Reserved to</span> <a href="javascript:;" target="_blank">Opportunity Connections</a> <span>©2024</span>
 									</div><!-- .copyrights-message end -->
 		
 								</div><!-- .fb-row end -->
