--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<div class="box-content">
 									<h4><a href="javascript:;">Target Audience</a></h4>
 									<p>
-										This should be used to tell a story and let your users know a little more about your product.
+										Our leads respond to ads online that promote ways to make more money. Ranging from passive income opportunities, MLMs, and Home Based Businesses. ( These individuals are NOT seeking  a job).
 									</p>
 								</div><!-- .box-content end -->
 							</div><!-- .box-info box-about-1 end -->
@@ -155,7 +155,7 @@
 								<div class="box-content">
 									<h4><a href="javascript:;">Complete Lead Profiles</a></h4>
 									<p>
-										This should be used to tell a story and let your users know a little more about your product.
+										Each prospect you receive comes with First Name, Last name, Phone Number, Potential Current Address, and Email Address.
 									</p>
 								</div><!-- .box-content end -->
 							</div><!-- .box-info box-about-1 end -->
@@ -170,7 +170,7 @@
 								<div class="box-content">
 									<h4><a href="javascript:;">Delivery Options</a></h4>
 									<p>
-										This should be used to tell a story and let your users know a little more about your product.
+										Each Lead File comes in the form of a CSV File and can be dialed maually or uploaded to any automated dialing system. These files are sent to you and to any 2nd party ( example: sales team) at your request by us.
 									</p>
 								</div><!-- .box-content end -->
 							</div><!-- .box-info box-about-1 end -->
@@ -202,7 +202,7 @@
 									dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
 									book. It has survived not only five centuries.
 								</p>
-								<a class="btn colorful medium hover-dark mt-20 move-top" href="#">Learn More</a>
+								<!-- <a class="btn colorful medium hover-dark mt-20 move-top" href="#">Learn More</a> -->
 							</div><!-- .section-title end -->
 		
 						</div><!-- .col-md-6 end -->
@@ -278,10 +278,12 @@
 		</div><!-- .section-flat end -->
 
 		<!-- === Section Watch Video 1 =========== -->
+
+		<!--
 		<div id="section-watch-video-1" class="section-parallax">
 		
 			<img src="images/files/parallax-bg/img-3.jpg" alt="">
-			<div class="overlay-colored color-bg-dark opacity-35"></div><!-- .overlay-colored end -->
+			<div class="overlay-colored color-bg-dark opacity-35"></div><!- .overlay-colored end ->
 			<div class="section-content">
 		
 				<div class="container">
@@ -291,28 +293,29 @@
 							<div class="section-title text-center text-white">
 								<h5>Watch Our Video</h5>
 								<h2>Don't Miss Our New Awesome Services Promo Video</h2>
-							</div><!-- .section-title end -->
+							</div><!- .section-title end ->
 		
-						</div><!-- .col-md-8 end -->
+						</div><!- .col-md-8 end ->
 						<div class="col-md-10 col-md-offset-1">
 
 							<div class="video-preview">
 								<a class="img-bg lightbox-iframe" href="https://vimeo.com/45830194">
-									<div class="overlay-colored color-bg-dark opacity-50"></div><!-- .overlay-colored end -->
+									<div class="overlay-colored color-bg-dark opacity-50"></div><!- .overlay-colored end ->
 									<img src="images/files/video-bg-1.jpg" alt="">
-								</a><!-- .img-bg end -->
+								</a><!- .img-bg end ->
 								<a class="btn-video lightbox-iframe" href="https://vimeo.com/45830194">
 									<i class="fa fa-play"></i>
-								</a><!-- .btn-video end -->
-							</div><!-- .video-preview end -->
+								</a><!- .btn-video end ->
+							</div><!- .video-preview end ->
 
-						</div><!-- .col-md-10 end -->
-					</div><!-- .row end -->
-				</div><!-- .container end -->
+						</div><!- .col-md-10 end ->
+					</div><!- .row end ->
+				</div><!- .container end ->
 		
-			</div><!-- .section-content end -->
+			</div><!- .section-content end ->
 		
-		</div><!-- .section-flat end -->
+		</div><!- .section-flat end ->
+	-->
 
 		<!-- === Section Clients 1 =========== -->
 		<div id="section-clients-1" class="section-flat">
@@ -583,8 +586,8 @@
 					<div class="popup-content">
 						<div class="cta-subscribe cta-subscribe-1 box-form text-center">
 							<div class="box-title">
-								<h3>Get Your Free Quote</h3>
-								<p>Supporting Call to Action Goes Here</p>
+								<h3>INCREASE YOUR COMMISSION SKY ROCKET YOUR SALES. 10x YOUR POTENTIAL INCOME FROM ANY PROGRAM IMMEDIATELY</h3>
+								<p>Fill in your name, email, and phone number for a call back TODAY</p>
 							</div><!-- end .box-title -->
 							<div class="box-content">
 								<div class="cs-notifications">
@@ -604,7 +607,7 @@
 											placeholder="Phone Number">
 									</div><!-- .form-group end -->
 									<div class="form-group">
-										<input type="submit" class="form-control" value="Subscribe Now!">
+										<input type="submit" class="form-control" value="Get Leads Now!">
 									</div><!-- .form-group end -->
 								</form><!-- #form-cta-subscribe-1 end -->
 							</div><!-- .box-content end -->
