--- a/index.html
+++ b/index.html
@@ -606,6 +606,11 @@
 										<input type="text" name="cs1PhoneNum" id="cs1PhoneNum" class="form-control"
 											placeholder="Phone Number">
 									</div><!-- .form-group end -->
+									
+									<div class="form-group1 checkbox-group">
+										<input type="checkbox" id="email-communications" name="email-communications" class="checkbox-control">
+										<label for="email-communications">I want to recieve sms communications from Opportunity Connections <a href="http://https://opportunityconnectionsusa.com/privacy_policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a></label>
+									</div>
 									<div class="form-group">
 										<input type="submit" class="form-control" value="Get Leads Now!">
 									</div><!-- .form-group end -->
