--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,4 +1,6 @@
 <div style="font-family: Arial, sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #f9f9f9;">
+    <div style="position: absolute; top: -50px; left: -50px; width: 200px; height: 200px; background: radial-gradient(circle, #1a73e8 0%, transparent 70%); animation: float1 6s ease-in-out infinite;"></div>
+    <div style="position: absolute; bottom: -50px; right: -50px; width: 150px; height: 150px; background: radial-gradient(circle, #34a853 0%, transparent 70%); animation: float2 8s ease-in-out infinite;"></div>
     <h2 style="color: #138e0e; text-align: center;">Opportunity Connections SMS MARKETING POLICY</h2>
     <p style="font-weight: bold; text-align: center;">Version 1.0 Effective Date: November 1, 2024</p>
     <p style="font-style: italic; text-align: center;">Note: This Policy is for SMS Marketing Only</p>
@@ -27,5 +29,15 @@
     <h3 style="color: #138e0e; margin-top: 20px;">CHANGES TO THIS POLICY</h3>
     <p>We may periodically update this policy. We will notify you about significant changes in the way we treat your information by placing a prominent notice on our site.</p>
 
-    <p>We thank you for your understanding and cooperation. If you have any questions or concerns about this policy, please feel free to contact us at <strong>(800) 702-4183</strong>.</p>
+    <p>We thank you for your understanding and cooperation. If you have any questions or concerns about this policy, please feel free to contact us at <strong>1-800-702-4183</strong>.</p>
+       <style>
+        @keyframes float1 {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+        }
+        @keyframes float2 {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(20px); }
+        }
+    </style>
 </div>
