--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 									
 									<div class="form-group1 checkbox-group">
 										<input type="checkbox" id="email-communications" name="email-communications" class="checkbox-control">
-										<label for="email-communications">I want to recieve sms communications from Opportunity Connections <a href="https://127.0.0.1:5500/privacy_policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a></label>
+										<label for="email-communications">I want to recieve sms communications from Opportunity Connections <a href="https://opportunityconnectionsusa.com/privacy_policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a></label>
 									</div>
 									<div class="form-group">
 										<input type="submit" class="form-control" value="Get Leads Now!">
