--- a/index.html
+++ b/index.html
@@ -328,40 +328,55 @@
 		
 							<p>Trusted by The World’s Most Innovative Businesses – Big and Small</p>
 							<div class="slider-clients">
-								<ul class="slick-slider">
+								<ul class="slick-slider1">
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-1.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/Amway.png" alt=""></a>
 										</div>
 									</li>
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-2.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/Avon.png" alt=""></a>
 										</div>
 									</li>
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-3.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/Logo01.jpg" alt="" width="200px" ></a>
 										</div>
 									</li>
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-4.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/Mary-Kay.png" alt=""></a>
 										</div>
 									</li>
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-5.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/ACN.png" alt=""></a>
 										</div>
 									</li>
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-6.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/Beachbody.png" alt=""></a>
 										</div>
 									</li>
 									<li>
 										<div class="client-single">
-											<a href="javascript:;"><img src="images/files/sliders/clients/img-2.png" alt=""></a>
+											<a href="javascript:;"><img src="images/files/sliders/clients/Melaleuca.png" alt=""></a>
+										</div>
+									</li>
+									<li>
+										<div class="client-single">
+											<a href="javascript:;"><img src="images/files/sliders/clients/EXP-Realty.png" alt=""></a>
+										</div>
+									</li>
+									<li>
+										<div class="client-single">
+											<a href="javascript:;"><img src="images/files/sliders/clients/Primerica.png" alt=""></a>
+										</div>
+									</li>
+									<li>
+										<div class="client-single">
+											<a href="javascript:;"><img src="images/files/sliders/clients/Prepaid-Legal.png" alt=""></a>
 										</div>
 									</li>
 								</ul><!-- .slick-slider end -->
