--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
 							<div class="col-md-12">
 		
 								<div class="hb-content">
-									<a class="logo logo-header" href="index.html">
-										<img src="images/files/logo-header.png" data-logo-alt="images/files/logo-header-alt.png" alt="">
-										<h3><span class="colored">Opportunity Connections</span></h3>
-										<span>Landing Page</span>
-									</a><!-- .logo end -->
+									<div>
+										<a class="logo logo-header" href="index.html">
+											<img src="images/files/logo-header.png" data-logo-alt="images/files/logo-header-alt.png" alt="">
+											<h3><span class="colored">Opportunity Connections</span></h3>
+											<span>Landing Page</span>
+										</a><!-- .logo end -->
+									</div>
+									<div class="phone">
+										
+										<a href="tel:1-800-702-4183"> Call US </a>
+									</div>
+
 								</div><!-- .hb-content end -->
 		
 							</div><!-- .col-md-12 end -->
@@ -414,13 +421,13 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-1.jpg" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
 													</div><!-- .ts-img end -->
 													<h5>Mark Smith</h5>
-													<span>Envato Inc.</span>
+													<span>Beachbody</span>
 												</div><!-- .ts-person end -->
 												<div class="ts-content">
-													This should be used to tell a story and let your users know about your product or service.
+													I love buying leads from opportunity connections i have over 100 people in my downline now!
 													<div class="rating">
 														<i class="fa fa-star"></i>
 														<i class="fa fa-star"></i>
@@ -437,13 +444,13 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-2.jpg" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
 													</div><!-- .ts-img end -->
 													<h5>Vera Duncan</h5>
-													<span>PayPal Inc.</span>
+													<span>Herbalife</span>
 												</div><!-- .ts-person end -->
 												<div class="ts-content">
-													This should be used to tell a story and let your users know about your product or service.
+													Vince was very helpful and he was 100% right about how quick people from these leads buy.
 													<div class="rating">
 														<i class="fa fa-star"></i>
 														<i class="fa fa-star"></i>
@@ -460,13 +467,13 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-3.jpg" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
 													</div><!-- .ts-img end -->
 													<h5>Bryce Vaughn</h5>
-													<span>Unbounce Inc.</span>
+													<span>Melaleuca</span>
 												</div><!-- .ts-person end -->
 												<div class="ts-content">
-													This should be used to tell a story and let your users know about your product or service.
+													I recommend these leads for any opportunity. Its working really good for me.
 													<div class="rating">
 														<i class="fa fa-star"></i>
 														<i class="fa fa-star"></i>
@@ -483,7 +490,7 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-1.jpg" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
 													</div><!-- .ts-img end -->
 													<h5>Mark Smith</h5>
 													<span>Envato Inc.</span>
@@ -547,7 +554,7 @@
 						<div class="col-md-8 col-md-offset-2">
 		
 							<h4>Contact Us Now!</h4>
-							<h1>Whatever The Challenge, We Always Deliver a Solution.</h1>
+							<h1>Our Leads Can Covert To Sales. Which Equals More Commissions For You!</h1>
 							<a class="popup-btn btn colorful large hover-dark mt-20 move-top" href="#">Learn More</a>
 		
 						</div><!-- .col-md-8 end -->
