--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									</div>
 									<div class="phone">
 										
-										<a href="tel:1-800-702-4183"> Call US </a>
+										<a href="tel:1-800-702-4183"> 1-800-702-4183 </a>
 									</div>
 
 								</div><!-- .hb-content end -->
