--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@
 									Top Tier Solutions for Volume
 								</h2>
 								<p>
-									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-									dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-									book. It has survived not only five centuries.
+									Our advertisers use a combination of over 100 offers on social media. These offers range from passive income opportunites, to make money online, to small business oppprtunities.
 								</p>
 								<!-- <a class="btn colorful medium hover-dark mt-20 move-top" href="#">Learn More</a> -->
 							</div><!-- .section-title end -->
@@ -444,7 +442,7 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-2.png" alt="">
 													</div><!-- .ts-img end -->
 													<h5>Vera Duncan</h5>
 													<span>Herbalife</span>
@@ -490,10 +488,10 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-2.png" alt="">
 													</div><!-- .ts-img end -->
-													<h5>Mark Smith</h5>
-													<span>Envato Inc.</span>
+													<h5>Diana Donovan</h5>
+													<span>Avon</span>
 												</div><!-- .ts-person end -->
 												<div class="ts-content">
 													This should be used to tell a story and let your users know about your product or service.
@@ -513,10 +511,10 @@
 											<div class="testimonial-single-1">
 												<div class="ts-person">
 													<div class="ts-img">
-														<img src="images/files/sliders/clients-testimonials/img-2.jpg" alt="">
+														<img src="images/files/sliders/clients-testimonials/img-1.png" alt="">
 													</div><!-- .ts-img end -->
-													<h5>Vera Duncan</h5>
-													<span>PayPal Inc.</span>
+													<h5>Anthony West</h5>
+													<span>Prepaid legal</span>
 												</div><!-- .ts-person end -->
 												<div class="ts-content">
 													This should be used to tell a story and let your users know about your product or service.
