--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	============================================= -->
 	<div id="loading-progress">
 		<a class="logo" href="#">
-			<img src="images/files/logo-header-alt.png" data-logo-alt="images/files/logo-header.png" alt="">
+			<img src="images/files/logo.png" data-logo-alt="images/files/logo-header.png" alt="">
 			<h3><span class="colored">Opportunity Connections</span></h3>
 			<span>We build Businesses</span>
 		</a><!-- .logo end -->
