--- a/index.html
+++ b/index.html
@@ -384,6 +384,11 @@
 											<a href="javascript:;"><img src="images/files/sliders/clients/Prepaid-Legal.png" alt=""></a>
 										</div>
 									</li>
+									<li>
+										<div class="client-single">
+											<a href="javascript:;"><img src="images/files/sliders/clients/pwcw-logo.webp" alt=""></a>
+										</div>
+									</li>
 								</ul><!-- .slick-slider end -->
 							</div><!-- .slider-clients end -->
 
