--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,43 +1,142 @@
-<div style="font-family: Arial, sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #f9f9f9;">
-    <div style="position: absolute; top: -50px; left: -50px; width: 200px; height: 200px; background: radial-gradient(circle, #1a73e8 0%, transparent 70%); animation: float1 6s ease-in-out infinite;"></div>
-    <div style="position: absolute; bottom: -50px; right: -50px; width: 150px; height: 150px; background: radial-gradient(circle, #34a853 0%, transparent 70%); animation: float2 8s ease-in-out infinite;"></div>
-    <h2 style="color: #138e0e; text-align: center;">Opportunity Connections SMS MARKETING POLICY</h2>
-    <p style="font-weight: bold; text-align: center;">Version 1.0 Effective Date: November 1, 2024</p>
-    <p style="font-style: italic; text-align: center;">Note: This Policy is for SMS Marketing Only</p>
-    
-    <p>At Opportunity Connections, we value your privacy and make every effort to respect your wishes and personal information. In line with this commitment, we have established the following policy for the use of our SMS marketing service. Please read it carefully to understand how we collect, use, and manage your phone numbers.</p>
+<div
+  style="
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: #333;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+  "
+>
+  <div
+    style="
+      position: absolute;
+      top: -50px;
+      left: -50px;
+      width: 200px;
+      height: 200px;
+      background: radial-gradient(circle, #1a73e8 0%, transparent 70%);
+      animation: float1 6s ease-in-out infinite;
+    "
+  ></div>
+  <div
+    style="
+      position: absolute;
+      bottom: -50px;
+      right: -50px;
+      width: 150px;
+      height: 150px;
+      background: radial-gradient(circle, #34a853 0%, transparent 70%);
+      animation: float2 8s ease-in-out infinite;
+    "
+  ></div>
+  <h2 style="color: #138e0e; text-align: center">
+    Opportunity Connections SMS MARKETING POLICY
+  </h2>
+  <p style="font-weight: bold; text-align: center">
+    Version 1.0 Effective Date: November 1, 2024
+  </p>
+  <p style="font-style: italic; text-align: center">
+    Note: This Policy is for SMS Marketing Only
+  </p>
 
-    <h3 style="color: #138e0e; margin-top: 20px;">COLLECTION OF PHONE NUMBERS</h3>
-    <p>We collect your phone numbers only when you voluntarily provide them to us, for example, during transactions, inquiries, or when you sign up for our promotional messages. You can opt in to receive these SMS messages either by clicking on the Learn More button (which shows on the front of the website <a href="https://opportunityconnectionsusa.com" style="color: #138e0e; text-decoration: none;">opportunityconnectionsusa.com</a>).</p>
+  <p>
+    At Opportunity Connections, we value your privacy and make every effort to
+    respect your wishes and personal information. In line with this commitment,
+    we have established the following policy for the use of our SMS marketing
+    service. Please read it carefully to understand how we collect, use, and
+    manage your phone numbers.
+  </p>
 
-    <h3 style="color: #138e0e; margin-top: 20px;">USE OF PHONE NUMBERS FOR SMS</h3>
-    <p>Your phone numbers are primarily used to provide you with personalized services, updates, and promotional offers. These text messages may relate to our products, services, discounts, or any updates that we think may interest you. We may also provide special discounts or offers through SMS messages. SMS messaging charges may be applied by your carrier. We will only share your phone number with our SMS provider, subject to their privacy policy.</p>
+  <h3 style="color: #138e0e; margin-top: 20px">COLLECTION OF PHONE NUMBERS</h3>
+  <p>
+    We collect your phone numbers only when you voluntarily provide them to us,
+    for example, during transactions, inquiries, or when you sign up for our
+    promotional messages. You can opt in to receive these SMS messages either by
+    clicking on the Learn More button (which shows on the front of the website
+    <a
+      href="https://opportunityconnectionsusa.com"
+      style="color: #138e0e; text-decoration: none"
+      >opportunityconnectionsusa.com</a
+    >).
+  </p>
 
-    <h3 style="color: #138e0e; margin-top: 20px;">OPTING OUT OF MARKETING MESSAGES</h3>
-    <p>If at any time you wish to stop receiving marketing SMS from us, you can opt out by:</p>
-    <ul style="list-style-type: disc; padding-left: 20px;">
-        <li><strong>Texting STOP</strong> to opt-out</li>
-        <li><strong>Texting UNSUBSCRIBE</strong> to opt-out</li>
-        <li><strong>Texting CANCEL</strong> to opt-out</li>
-        <li><strong>Texting QUIT</strong> to opt-out</li>
-    </ul>
-    <p>Please note that the opt-out process may take up to 1-2 business days to become effective. During this period, you may still receive some messages from us.</p>
+  <h3 style="color: #138e0e; margin-top: 20px">USE OF PHONE NUMBERS FOR SMS</h3>
+  <p>
+    OPPORTUNITY CONNECTIONS LLC would like your consent to send text message
+    communications from <b>+18007024183, +18004713948,+18004840435</b> to your mobile
+    number listed above, regarding informational, marketing. Consent is not a
+    condition of purchase. Message frequency varies. Message and data rates may
+    apply. Reply 'STOP' to unsubscribe at any time. Reply 'HELP' for assistance
+    or more information.
+  </p>
+  <p>
+    Your phone numbers are primarily used to provide you with personalized
+    services, updates, and promotional offers. These text messages may relate to
+    our products, services, discounts, or any updates that we think may interest
+    you. We may also provide special discounts or offers through SMS messages.
+    SMS messaging charges may be applied by your carrier. We will only share
+    your phone number with our SMS provider, subject to their privacy policy.
+  </p>
 
-    <h3 style="color: #138e0e; margin-top: 20px;">PRIVACY OF PHONE NUMBERS</h3>
-    <p>Once you have opted out, we will not send you any more SMS messages, nor will we sell or transfer your phone number to another party.</p>
+  <h3 style="color: #138e0e; margin-top: 20px">
+    OPTING OUT OF MARKETING MESSAGES
+  </h3>
+  <p>
+    If at any time you wish to stop receiving marketing SMS from us, you can opt
+    out by:
+  </p>
+  <ul style="list-style-type: disc; padding-left: 20px">
+    <li><strong>Texting STOP</strong> to opt-out</li>
+    <li><strong>Texting UNSUBSCRIBE</strong> to opt-out</li>
+    <li><strong>Texting CANCEL</strong> to opt-out</li>
+    <li><strong>Texting QUIT</strong> to opt-out</li>
+  </ul>
+  <p>
+    Please note that the opt-out process may take up to 1-2 business days to
+    become effective. During this period, you may still receive some messages
+    from us.
+  </p>
 
-    <h3 style="color: #138e0e; margin-top: 20px;">CHANGES TO THIS POLICY</h3>
-    <p>We may periodically update this policy. We will notify you about significant changes in the way we treat your information by placing a prominent notice on our site.</p>
+  <h3 style="color: #138e0e; margin-top: 20px">PRIVACY OF PHONE NUMBERS</h3>
+  <p>
+    Once you have opted out, we will not send you any more SMS messages, nor
+    will we sell or transfer your phone number to another party.
+  </p>
 
-    <p>We thank you for your understanding and cooperation. If you have any questions or concerns about this policy, please feel free to contact us at <strong>1-800-702-4183</strong>.</p>
-       <style>
-        @keyframes float1 {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-        @keyframes float2 {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(20px); }
-        }
-    </style>
+  <h3 style="color: #138e0e; margin-top: 20px">CHANGES TO THIS POLICY</h3>
+  <p>
+    We may periodically update this policy. We will notify you about significant
+    changes in the way we treat your information by placing a prominent notice
+    on our site.
+  </p>
+
+  <p>
+    We thank you for your understanding and cooperation. If you have any
+    questions or concerns about this policy, please feel free to contact us at
+    <strong>1-800-702-4183</strong>.
+  </p>
+  <style>
+    @keyframes float1 {
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-20px);
+      }
+    }
+    @keyframes float2 {
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(20px);
+      }
+    }
+  </style>
 </div>
